force-app/main/default/Objects/Note__c/Note__c.object-meta.xml
<CustomObject>
    <description>Holds comments for various records</description>
    <label>Note</label>
    <nameField>
        <displayFormat>Note{YYYY}{MM}{DD}-{00}</displayFormat>
        <label>Note Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>