force-app/main/default/Objects/Note__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Record for which note applies</description>
    <inlineHelpText>Record for which note applies</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>ContactNotes</relationshipName>
    <type>Lookup</type>
</CustomField>