force-app/main/default/Objects/Note__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Record for which note applies</description>
    <inlineHelpText>Record for which note applies</inlineHelpText>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>ContractNotes</relationshipName>
    <type>Lookup</type>
</CustomField>