force-app/main/default/Objects/Note__c/fields/NoteBody__c.field-meta.xml
<CustomField>
    <fullName>NoteBody__c</fullName>
    <description>The notes associated with the record</description>
    <inlineHelpText>The notes associated with the record</inlineHelpText>
    <label>Note Body</label>
    <length>120000</length>
    <type>Html</type>
</CustomField>