force-app/main/default/Objects/Note__c/fields/NoteTitle__c.field-meta.xml
<CustomField>
    <fullName>NoteTitle__c</fullName>
    <description>Short line used to reference note</description>
    <inlineHelpText>Short line used to reference note</inlineHelpText>
    <label>Note Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>