force-app/main/default/Objects/Note__c/fields/NoteType__c.field-meta.xml
<CustomField>
    <fullName>NoteType__c</fullName>
    <description>Categorization of the note</description>
    <inlineHelpText>Categorization of the note</inlineHelpText>
    <label>Note Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Program Reflection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>