force-app/main/default/Objects/Note__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Record for which note applies</description>
    <inlineHelpText>Record for which note applies</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>OpportunityNotes</relationshipName>
    <type>Lookup</type>
</CustomField>