force-app/main/default/Objects/Note__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Record for which note applies</description>
    <inlineHelpText>Record for which note applies</inlineHelpText>
    <label>Service Contract</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>ServiceContractNotes</relationshipName>
    <type>Lookup</type>
</CustomField>