force-app/main/default/Objects/Note__c/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <description>Standard record type for notes</description>
    <label>General</label>
</RecordType>